2010-06-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Quote paths when opening files.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Implemented CanOpenTerminal/OpenInTerminal.

2010-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Updater/UpdateService.cs: Fix incorrect use of
	  ShowCustomDialog/RunCustomDialog.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Add a Return glyph mapping.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: More Macification.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Macify some command names.

2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Attempt to fix keyval->menu accel mapping
	  for non-English keyboards.

2010-05-11  Levi Bard  <levi@unity3d.com>

	* Framework/AppleEvent.cs: Off-by-one.

2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Menus/OSXMenu.cs: Track api changes.

2010-05-04  Jonathan Pobst  <monkey@jpobst.com>

	* Framework/AppleScript.cs: csc can't do Enum->Struct cast,
	make it an Enum->int->Struct cast.

2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.cs:
	* MacPlatform.csproj:
	* Framework/AppleScript.cs:
	* ExternalConsoleProcess.cs: Implemented Mac external console,
	  somewhat hackily.

2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs:
	* Menus/OSXMenu.cs: Cleaner OpenUrl implementation.

2010-04-27  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.cs:
	* MacPlatform.csproj: Call 'open' directly when opening urls
	  to avoid the -W argument that mono adds, which leaves us
	  with lots of zombie 'open' processes.

2010-04-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Framework/Carbon.cs:
	* Framework/AppleEvent.cs:
	* Framework/AppleScript.cs: Moved all the AE stuff from Carbon
	  to AppleEvents.
