@@ -245,7 +245,11 @@ namespace MonoDevelop.Platform
 				};
 				
 				ApplicationEvents.OpenDocuments += delegate (object sender, ApplicationDocumentEventArgs e) {
-					IdeApp.OpenFiles (e.Documents.Select (doc => new FileOpenInformation (doc.Key, doc.Value, 1, true)));
+					//OpenFiles may pump the mainloop, but can't do that from an AppleEvent, so use a brief timeout
+					GLib.Timeout.Add (10, delegate {
+						IdeApp.OpenFiles (e.Documents.Select (doc => new FileOpenInformation (doc.Key, doc.Value, 1, true)));
+						return false;
+					});
 					e.Handled = true;
 				};
 				
