@@ -152,11 +152,7 @@ namespace MonoDevelop.Ide.ProgressMonitoring
 		[AsyncDispatch]
 		public virtual void Dispose()
 		{
-			// HACK: Causes crash on OSX
-			if (!PropertyService.IsMac) {
-				// Make sure we are done with all pending calls
-				DispatchService.RunPendingEvents ();
-			}
+			DispatchService.RunPendingEvents ();
 			
 			lock (progressTracker) {
 				progressTracker.Done ();
